--- a/dashboard.html
+++ b/dashboard.html
@@ -48,6 +48,11 @@
     </div>
 
     <div>
+        <h3>Find Other Users:</h3>
+        <button class="dashboard-button" onclick="location.href='https://toonigy.github.io/world-of-life/find_users.html'">Find Other Players</button>
+    </div>
+
+    <div>
         <h3>Your House:</h3>
         <p id="house-info">You don't own a house yet.</p>
     </div>
